--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,17 +1,27 @@
 <h1>Reddit Posts</h1>
+ <link rel="stylesheet" href="styles.css" media="screen" title="no title">
 
 <ul>
   {{#each posts}}
     <li>
+      <img src="https:{{this.image}}"/>
       <p>
-        {{this.id}}. {{this.post}}
+        {{this.title}}. 
+      </p>
+      <p>
+        {{this.link}}. 
+      </p>
+      <p>
+        {{this.summary}} 
+      </p>
 
-        <button data-postid="{{this.id}}" class="delpost">Delete</button>
+        <button data-postid="{{this._id}}" class="delpost">Delete</button>
       </p>
     </li>
   {{/each}}
 </ul>
 
+<div class="jumbotron">
 <h2>Add a post</h2>
 <form id="addpost" class="button-size">
 	<textarea type="text" name="post"></textarea>
@@ -24,6 +34,18 @@
 	<textarea type="text" name="post" placeholder="what do you want to update this post title to?"></textarea>
 	<button type="submit">Update post!</button>
 </form>
+</div>
+
+
+
+
+
+
+
+
+
+
+
 
 <script type="text/javascript">
   $(".delpost").on("click", function(event) {
