--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Movie To Watch</title>
+	<title>Post To See</title>
 	<script src="https://code.jquery.com/jquery.js"></script>
 </head>
 <body>
